primeira parte do exercicio finalizada

--- a/aula14ex/correcao/ex016/modelo.html
+++ b/aula14ex/correcao/ex016/modelo.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercicio</title>
+    <title>Super Contador</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Tabuada</h1>
+        <h1>Vamos contar</h1>
     </header>
     <section>
-        <div>
-            <p>Número: <input type="number" name="numero" id="txtn"> <input type="button" value="Gerar Tabuada" id="botao"></p>
+        <div id="dados">
+            <p>Início: <input type="number" name="inicio" id="txti"></p>
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            <p><input type="button" value="Contar" onclick="contar()"></p>
         </div>
-        <div>
-            <select name="" id="tabuada" size="10"></select>
+        <div id="res">
+            Preparando a contagem...
         </div>
     </section>
     <footer>
