--- a/aula14ex/correcao/ex017/modelo.html
+++ b/aula14ex/correcao/ex017/modelo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercicio</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -13,10 +13,12 @@
     </header>
     <section>
         <div>
-            <p>Número: <input type="number" name="numero" id="txtn"> <input type="button" value="Gerar Tabuada" id="botao"></p>
+            <p>Número: <input type="number" name="num" id="txtn"> <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
         <div>
-            <select name="" id="tabuada" size="10"></select>
+            <select name="tabuada" id="seltab" size="10">
+                <option value="">Digite um número acima</option>
+            </select>
         </div>
     </section>
     <footer>
