--- a/aula16ex/ex18/modelo.html
+++ b/aula16ex/ex18/modelo.html
@@ -9,14 +9,17 @@
 </head>
 <body>
     <header>
-        <h1>Tabuada</h1>
+        <h1>Analisador de Números</h1>
     </header>
     <section>
         <div>
-            <p>Número: <input type="number" name="numero" id="txtn"> <input type="button" value="Gerar Tabuada" id="botao"></p>
+            <p>Número (entre 1 em 100): <input type="number" name="numero" id="txtn"> <input type="button" value="Adicionar" id="bot-add"></p>
         </div>
         <div>
-            <select name="" id="tabuada" size="10"></select>
+            <select name="form" id="lista" size="10">
+                <option value=""></option>
+            </select>
+            <p><input type="button" value="Finalizar" id="bot-fin"></p>
         </div>
     </section>
     <footer>
