função mostrar na tela adicionada

--- a/desafios/lista-de-tarefas/index.html
+++ b/desafios/lista-de-tarefas/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
 <body>
@@ -15,16 +15,16 @@
         <h1>Lista de Tarefas</h1>
         <div class="linha-adicionar">
             <input type="text" name="" id="txt_tarefa" placeholder="Adicionar nova tarefa">
-            <span id="adicionar"><i class="fi fi-rr-plus"></i></span>
+            <span id="adicionar" class="icone"><img src="icones/plus-free-icon-font.svg" alt=""></i></span>
         </div>
         <div id="area-das-tarefas">
             <div class="tarefa" id="templateTarefas">
                 <p id="paragrafo-template">Tarefa 1 </p>
-                <span class="icone"><i class="fi fi-rr-pencil"></i></span>
-                <span class="icone"><i class="fi fi-rr-trash"></i></span>
+                <span class="icone"><img src="icones/pencil-free-icon-font.svg" alt=""></span>
+                <span class="icone"><img src="icones/trash-free-icon-font.svg" alt=""></span>
             </div>
         </div>
     </section>
-    
+    <script src="script.js"></script>
 </body>
 </html>
