--- a/desafios/lista-de-tarefas/index.html
+++ b/desafios/lista-de-tarefas/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <section>
-        <h1>Lista de Tarefas</h1>
+        <h1><a href="index.html">Lista de Tarefas</a></h1>
         <div class="linha-adicionar">
             <input type="text" name="" id="txt_tarefa" placeholder="Adicionar nova tarefa">
             <span id="adicionar" class="icone"><img src="icones/plus-free-icon-font.svg" alt=""></i></span>
