imagens do icones foram colocadas de background

--- a/desafios/lista-de-tarefas/index.html
+++ b/desafios/lista-de-tarefas/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
     <link rel="stylesheet" href="style.css">
-    
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+
 </head>
 <body>
     
@@ -20,8 +19,8 @@
         <div id="area-das-tarefas">
             <div class="tarefa" id="templateTarefas">
                 <p id="paragrafo-template">Tarefa 1 </p>
-                <span class="icone"><img src="icones/pencil-free-icon-font.svg" alt=""></span>
-                <span class="icone"><img src="icones/trash-free-icon-font.svg" alt=""></span>
+                <span class="icone imagem-icone imagem-icone-lapis"></span>
+                <span class="icone imagem-icone imagem-icone-lixo"></span>
             </div>
         </div>
     </section>
