desafio lista de tarefas v1.0

--- a/desafios/lista-de-tarefas/index.html
+++ b/desafios/lista-de-tarefas/index.html
@@ -9,12 +9,11 @@
 
 </head>
 <body>
-    
     <section>
         <h1><a href="index.html">Lista de Tarefas</a></h1>
         <div class="linha-adicionar">
             <input type="text" name="" id="txt_tarefa" placeholder="Adicionar nova tarefa">
-            <span id="adicionar" class="icone"><img src="icones/plus-free-icon-font.svg" alt=""></i></span>
+            <span id="adicionar" class="icone"><img src="icones/plus-free-icon-font.svg" alt=""></span>
         </div>
         <div id="area-das-tarefas">
             <div class="tarefa" id="templateTarefas">
