--- a/desafios/lista-de-tarefas/index.html
+++ b/desafios/lista-de-tarefas/index.html
@@ -13,11 +13,11 @@
         <h1><a href="index.html">Lista de Tarefas</a></h1>
         <div class="linha-adicionar">
             <input type="text" name="" id="txt_tarefa" placeholder="Adicionar nova tarefa">
-            <span id="adicionar" class="icone"><img src="icones/plus-free-icon-font.svg" alt=""></span>
+            <span id="adicionar" class="icone imagem-icone imagem-icone-adicionar"></span>
         </div>
         <div id="area-das-tarefas">
             <div class="tarefa" id="templateTarefas">
-                <p id="paragrafo-template">Tarefa 1 </p>
+                <p id="paragrafo-template">Tarefa de Exemplo</p>
                 <span class="icone imagem-icone imagem-icone-lapis"></span>
                 <span class="icone imagem-icone imagem-icone-lixo"></span>
             </div>
