funcionalidade de mudar a cor do botao foi adicionada

--- a/desafios/pizzaria/index.html
+++ b/desafios/pizzaria/index.html
@@ -10,10 +10,12 @@
 <body>
     <h1>Pizzas</h1>
     <main>
-        <!-- Elemento adicionado antes do JS apenas para visualização -->
         <div id="area-das-pizzas">
+            <!-- Elemento adicionado antes do JS apenas para visualização -->
             <div id="quad-pizza-exemplo" class="container-pizza">
-                <div class="foto-pizza"></div>
+                <div class="container-foto-pizza">
+                    <img src="images/pizza.png" alt="foto de uma pizza" class="foto-pizza">
+                </div>
                 <div class="itens-pizza">
                     <div class="icone-adicionar"></div>
                     <p>Preço</p>
